[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://res/PNG/rail.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://BebasNeue-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/scenes/Poubelle.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/Station.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/PNG/BoutonScanEnfoncé.png" type="Texture" id=7]
[ext_resource path="res://res/PNG/BoutonScanPasEnfoncé.png" type="Texture" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -620.695, 118.993, 0, 0, 0, 0, 2423.4, 118.993 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2488.04, 134.802, 0, 0, 0, 0, -611.364, 132.282 )
}

[sub_resource type="DynamicFont" id=4]
size = 25
extra_spacing_char = 5
font_data = ExtResource( 4 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 413.435, -295.149, 0, 0, 0, 0, 1932.7, -293.03 )
}

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="rail" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1335.0
margin_top = -254.0
margin_right = 25060.0
margin_bottom = 2428.0
rect_scale = Vector2( 0.1, 0.1 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rail2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1338.0
margin_top = 156.0
margin_right = 26836.0
margin_bottom = 2838.0
rect_scale = Vector2( 0.1, 0.1 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Station" parent="." instance=ExtResource( 6 )]
position = Vector2( 153.577, 410.241 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 5.33936, 295.032 )
curve = SubResource( 1 )

[node name="Path2DReturn" type="Path2D" parent="."]
position = Vector2( 5.33936, 701.282 )
curve = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
limit_bottom = 1200
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 1.68164
margin_top = 0.66005
margin_right = 1.68164
margin_bottom = 0.660034

[node name="SCANButton" type="TextureButton" parent="CanvasLayer/GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 28.7256
margin_top = -168.966
margin_right = 1487.73
margin_bottom = 1258.03
rect_scale = Vector2( 0.1, 0.1 )
action_mode = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objectif" type="Label" parent="CanvasLayer/GUI"]
margin_left = 9.81172
margin_top = 24.5613
margin_right = 196.812
margin_bottom = 60.5613
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = SubResource( 4 )
text = "Objectif = 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PathWagon" type="Path2D" parent="."]
position = Vector2( -1.65393, 167.178 )
curve = SubResource( 3 )

[node name="PathFollowWagon" type="PathFollow2D" parent="PathWagon"]
position = Vector2( 413.435, -295.149 )
rotation = 0.00138502

[node name="TimerWagon" type="Timer" parent="."]
autostart = true

[node name="TimerFastTrain" type="Timer" parent="."]
wait_time = 35.0
one_shot = true
autostart = true

[node name="Poubelle" parent="." instance=ExtResource( 5 )]
position = Vector2( 1902.36, 1095.27 )
scale = Vector2( 1.3, 1.3 )

[connection signal="launch_train" from="Station" to="." method="_on_Station_launch_train"]
[connection signal="pressed" from="CanvasLayer/GUI/SCANButton" to="." method="_on_SCANButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="spawn_lesion"]
[connection signal="timeout" from="TimerWagon" to="." method="_on_TimerWagon_timeout"]
[connection signal="timeout" from="TimerFastTrain" to="." method="_on_TimerFastTrain_timeout_spawn"]
